<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="io.imont.android.sdkdemo.RuleActivity"
                tools:showIn="@layout/activity_rule">


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/rule_name"
            android:layout_alignParentEnd="true"/>

    <TextView
            android:text="@string/if_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rule_name"
            android:layout_alignParentStart="true"
            android:layout_marginTop="19dp" android:id="@+id/if_text"
            android:textSize="24sp"/>

    <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/condition_spinner"
            android:layout_alignTop="@+id/if_text"
            android:layout_toEndOf="@+id/if_text"
            android:entries="@array/rule_spinner" android:layout_marginTop="6dp"/>

    <TextView
            android:text="@string/conditions_met"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/conditions_met_text" android:textSize="24sp"
            android:layout_alignTop="@+id/if_text" android:layout_toEndOf="@+id/condition_spinner"/>


    <android.support.design.widget.FloatingActionButton
            android:id="@+id/save_rule_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_save"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
    />

    <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:id="@+id/condition_list"
            android:layout_below="@+id/condition_spinner"
            android:layout_alignParentStart="true"
            android:divider="@null"
            android:dividerHeight="0dp"
    />

    <TextView
            android:text="@string/perform_these_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp" android:id="@+id/perform_text"
            android:textSize="24sp"
            android:layout_below="@+id/condition_list"
            android:layout_alignParentStart="true"/>

    <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:id="@+id/action_list"
            android:layout_below="@+id/perform_text"
            android:layout_alignParentStart="true"/>

</RelativeLayout>
